--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif; }
 
+body {
+  background: whitesmoke; }
+
 .search-form {
   display: flex;
   border: none;
@@ -37,11 +40,15 @@
 
 .search-result {
   border: 1px solid #a0a0a0;
-  padding: 10px;
+  padding: 20px;
   margin: 10px 0;
   box-shadow: 1px 1px 3px #c1c1c1;
   overflow: hidden;
-  max-width: 800px; }
+  max-width: 800px;
+  border-radius: 3px;
+  background: white;
+  font-size: 18px;
+  letter-spacing: 1px; }
   .search-result .block-container {
     font-size: 20px;
     font-weight: bold;
@@ -63,6 +70,14 @@
     font-weight: bold;
     text-align: center;
     padding-bottom: 20px; }
+  .search-result .personal-note {
+    width: 100%;
+    box-sizing: border-box;
+    height: 100px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    padding: 5px;
+    letter-spacing: 1px; }
   .search-result .css-class {
     width: 100%;
     display: block; }
@@ -90,7 +105,9 @@
       .search-result .additional-info .additional-images img {
         width: 100%; }
     .search-result .additional-info .additional-left {
-      width: 50%; }
+      width: 50%;
+      display: flex;
+      flex-direction: column; }
   .search-result.active .additional-info {
     display: flex; }
 
